# Rear-View-Camera

./: MainActivity.kt  README.md  hello.txt
App Layer/I2c_v1/com/example/myapplication/: GuideLinesView.java  MainActivity.kt  Steering.kt
App Layer/MVVM/objectdetection/app/: build.gradle.kts
App Layer/MVVM/objectdetection/gradle/: libs.versions.toml
App Layer/MVVM/objectdetection/gradle/wrapper/: gradle-wrapper.properties
Application/objectdetection/gradle/: libs.versions.toml
GearService/: Android.bp  gearservice.cpp  init.gear.rc
GearService/include/: gpiohal.h
GearService/sepolicy/: file_contexts  reversegear.te  service_contexts
GoGo/objectdetection/app/: build.gradle.kts
GoGo/objectdetection/app/src/main/: AndroidManifest.xml
ObjectDetection_Test/ObjectDetectionTask/: CMakeLists.txt  classes.txt  main.cpp
gpio/: Android.bp  gpiohal.cpp
gpioTestApp/: Android.bp  gpiohal.cpp
i2c/1.0/default/: Android.bp  hali2c.cpp  hali2c.h
mvvm/MVVM/objectdetection/app/: build.gradle.kts
mvvm/MVVM/objectdetection/gradle/: libs.versions.toml
objectdetection/app/: build.gradle.kts
objectdetection/app/src/main/: AndroidManifest.xml
objectdetection/app/src/main/res/layout/: activity_main.xml  sample_my_view.xml
objectdetection/gradle/: libs.versions.toml
objectdetection/gradle/wrapper/: gradle-wrapper.properties
openCvApp/: local.properties
openCvApp/app/: build.gradle
openCvApp/app/src/main/: AndroidManifest.xml
openCvApp/app/src/main/res/layout/: activity_main.xml
overlays/: GuideLinesView.java
(+20 files in other folders)
